first page is done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="container container-nav">
+      <div class="container container-flex">
         <div class="site-title">
           <h1>Living the simple life</h1>
           <p class="subtitle">A blog exploring minimalism in life</p>
@@ -26,7 +26,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container container-flex">
       <main role="main">
         <article class="article-featured">
           <h2 class="article-title">Finding simplicity in life</h2>
@@ -109,7 +109,7 @@
       </main>
       <aside class="sidebar">
         <div class="sidebar-widget">
-          <h2 class="widget-title">About me</h2>
+          <h2 class="widget-title">ABOUT ME</h2>
           <img
             src="./pictures/mike-baker.jpeg"
             alt="picture of a smiling man"
@@ -122,7 +122,7 @@
         </div>
 
         <div class="sidebar-widget">
-          <h2 class="widget-title">Recents posts</h2>
+          <h2 class="widget-title">RECENT POSTS</h2>
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Keep cooking simple</h3>
             <img
@@ -152,7 +152,7 @@
     </div>
 
     <footer>
-      <p>Living the Simple Life</p>
+      <p><strong>Living the Simple Life</strong></p>
       <p>Copyright 2019</p>
     </footer>
   </body>
